homeにclickできる場所を追加

--- a/app/views/top_pages/_admin.html.erb
+++ b/app/views/top_pages/_admin.html.erb
@@ -32,7 +32,7 @@
   <div class="home-admin-right-card-area">
     <div class="home-admin-right-card">
       <div class="home-admin-right-card-flex">
-        <h3>本日の勤怠状況</h3>
+        <h3 onclick="window.location = '<%= admin_attendance_today_path %>'" role="link", title="今日の勤怠確認へ">本日の勤怠状況</h3>
       </div>
       <div id="now-user-attendances-container">
         <%= render 'now_attendance' %>
@@ -40,30 +40,14 @@
     </div>
     <div class="home-admin-right-card">
       <div class="home-admin-right-card-flex">
-        <h3>今月の勤怠状況</h3>
+        <h3 onclick="window.location = '<%= admin_attendance_thismonth_path %>'" role="link" title="今月の勤怠確認へ">今月の勤怠状況</h3>
       </div>
       <h4 onclick="toggleDisplay()" title="表示を切り替えます">
         <i class="fa-solid fa-right-left"></i> <span id="this_month_button">勤務時間が多い3名</span>
       </h4>
       <% @this_month_attendance_list.first(3).each do |this_month_attendance| %>
-        <div class="home-admin-top3-card
-          <% if this_month_attendance[:working_seconds] == 0 %>
-            gray-color
-          <% elsif this_month_attendance[:working_seconds] >= 25200 %>
-            yellow-color
-          <% elsif this_month_attendance[:working_seconds] >= 28800 %>
-            red-color
-          <% else %>
-            work-color
-          <% end %>
-        ">
-          <p><%= this_month_attendance[:user_name] %>さん</p>
-          <p>実労働時間： <%= this_month_attendance[:working_time_str] %></p>
-        </div>
-      <% end %>
-      <div id="all_attendances" style="display:none;">
-        <% @this_month_attendance_list.each do |this_month_attendance| %>
-          <div class="home-admin-all-card
+        <%= link_to user_attendance_thismonth_path(this_month_attendance[:user_id]), class: "home-admin-top3-card-a", title: "#{this_month_attendance[:user_name]}の今月の勤怠確認へ" do %>
+          <div class="home-admin-top3-card
             <% if this_month_attendance[:working_seconds] == 0 %>
               gray-color
             <% elsif this_month_attendance[:working_seconds] >= 25200 %>
@@ -77,6 +61,26 @@
             <p><%= this_month_attendance[:user_name] %>さん</p>
             <p>実労働時間： <%= this_month_attendance[:working_time_str] %></p>
           </div>
+        <% end %>
+      <% end %>
+      <div id="all_attendances" style="display:none;">
+        <% @this_month_attendance_list.each do |this_month_attendance| %>
+          <%= link_to user_attendance_thismonth_path(this_month_attendance[:user_id]), class: "home-admin-all-card-a", title: "#{this_month_attendance[:user_name]}の今月の勤怠確認へ" do %>
+            <div class="home-admin-all-card
+              <% if this_month_attendance[:working_seconds] == 0 %>
+                gray-color
+              <% elsif this_month_attendance[:working_seconds] >= 25200 %>
+                yellow-color
+              <% elsif this_month_attendance[:working_seconds] >= 28800 %>
+                red-color
+              <% else %>
+                work-color
+              <% end %>
+            ">
+              <p><%= this_month_attendance[:user_name] %>さん</p>
+              <p>実労働時間： <%= this_month_attendance[:working_time_str] %></p>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
@@ -123,13 +127,13 @@
         card.style.display = 'none';
       });
       all.style.display = 'block';
-      button.textContent = '上位3名を表示';
+      button.textContent = '全て表示';
     } else {
       top3.forEach(function(card) {
         card.style.display = 'flex';
       });
       all.style.display = 'none';
-      button.textContent = '全て表示';
+      button.textContent = '上位3名を表示';
     }
   }
   
