--- a/app/assets/stylesheets/top_admin.css
+++ b/app/assets/stylesheets/top_admin.css
@@ -58,6 +58,7 @@
   align-items: center;
 }
 .home-admin-right-card h3{
+  cursor: pointer;
   text-align: center;
   font-size: 1.5rem;
   margin: 10px 0;
@@ -172,12 +173,21 @@
   box-sizing: border-box;
   padding: 10px;
 }
+.home-admin-all-card:hover,
+.home-admin-top3-card:hover{
+  background-color: #f5f5f5;
+}
 .home-admin-top3-card p,
 .home-admin-all-card p{
   font-size: 1.2rem;
   margin: 0;
   width: 50%;
   text-align: center;
+}
+.home-admin-top3-card-a,
+.home-admin-all-card-a{
+  text-decoration: none;
+  color: #000;
 }
 .home-admin-reload{
   position: absolute;
