利用できない項目にnot-allowedを追加

--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -43,7 +43,7 @@
         <% end %>
       </div>
       <div class="user-show-attendance-button">
-        <%= link_to root_path, class: "index-user-card-button" do %>
+        <%= link_to root_path, class: "index-user-card-button header-menu-not-allowed", title: "現在利用できません" do %>
           年別データ
         <% end %>
       </div>
