--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,11 +41,11 @@
           </div>
           <div class="header-menu-contents-card-button-area">
             <% if current_user.admin %>
-              <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button" %>
+              <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button header-menu-not-allowed", title: "現在利用できません" %>
               <%= link_to "月別データ", admin_attendance_thismonth_path, class: "header-menu-contents-card-button", title: "今月の従業員全員の勤怠" %>
               <%= link_to "日別データ", admin_attendance_today_path, class: "header-menu-contents-card-button", title: "今日の従業員全員の勤怠" %>
             <% else %>
-              <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button" %>
+              <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button header-menu-not-allowed", title: "現在利用できません" %>
               <%= link_to "月別データ", user_attendance_thismonth_path(current_user), class: "header-menu-contents-card-button", title: "今月の勤怠" %>
               <%= link_to "日別データ", user_attendance_today_path(current_user), class: "header-menu-contents-card-button", title: "今日の勤怠" %>
             <% end %>
@@ -75,7 +75,7 @@
               <p class="header-menu-contents-card-text">勤怠状況</p>
             </div>
             <div class="header-menu-contents-card-button-area">
-              <%= link_to "一覧", root_path, class: "header-menu-contents-card-button" %>
+              <%= link_to "一覧", root_path, class: "header-menu-contents-card-button header-menu-not-allowed", title: "現在利用できません" %>
             </div>
           </div>
         </div>
