--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -19,6 +19,5 @@
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
